2008-07-28  Mirco Bauer <meebey@meebey.net> 

	* Frontend-SWF.mdp: Build as WinExe.

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* Frontend-SWF.mdp: Removed assembly attributes that are now part of the
	  shared AssemblyVersion.cs file.

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.6.0.

2008-06-02  Mirco Bauer <meebey@meebey.net> 

	

2008-04-01  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.5.31

2008-01-31  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.5.30.

2007-12-25  Mirco Bauer <meebey@meebey.net> 

	* Frontend-SWF.mdp: Updated using MonoDevelop 0.18.1
