@@ -1,3 +1,12 @@
+2008-07-29  Mirco Bauer <meebey@meebey.net> 
+
+	* MainWindow.cs: Fixed indention.
+	
+	  Apply theming settings.
+	* Chats/ChatView.cs: Implemented theme support of background and foreground
+	  color.
+	* ChatViewManager.cs: Apply theming settings.
+
 2008-07-28  Mirco Bauer <meebey@meebey.net> 
 
 	* Frontend-SWF.mdp: Build as WinExe.
